test/nostdlib/recordpass7.good
recordpass7.chpl:24: error: (a = 0, b = 0, c = 0, d = 0, e = 2, f = 0, g = 0, h = 0, i = 0, j = 0, k = 0)
